# shit-chat-says

./: .dockerignore  .env.example  .gitignore  .rustfmt.toml  Cargo.toml  README.md  chat.example.json  clean.js  collector.example.json  index.html
.github/workflows/: ui-deploy.yml
_app/: start-eed1edce.js
_app/assets/pages/: __layout.svelte-95da20d7.css
_app/chunks/: vendor-b220f2b7.js
_app/pages/: __error.svelte-49a8268d.js  __layout.svelte-d1feb1a0.js  index.svelte-09e47001.js
_app/pages/admin/: index.svelte-d52c272c.js
_app/pages/login/: index.svelte-381773cb.js
_app/pages/logs/: index.svelte-20c38327.js
_app/pages/models/: index.svelte-90c375bd.js
benches/: chains.rs
config/: chat.example.json  ci-api.example.json  collector.example.json  config.example.json  train.example.json
docker/: .env.example  Dockerfile  database-entrypoint.sh  docker-compose.yml  postgresql.conf  tasks-entrypoint.sh  tasks.cron  train.cron  train.sh
docker/scripts/: migrate.sh  seed.sh  train-entrypoint.sh  train.sh
docker/tasks/: train.sh  transfer.sh
scs-chain/: Cargo.toml  README.md
scs-chain/benches/: chains.rs
scs-chain/src/: lib.rs
scs-ci-api/: Cargo.toml  README.md
scs-ci-api/src/: config.rs  main.rs  schema.rs  v1.rs
scs-config/: Cargo.toml
scs-config/src/: chat.rs  collector.rs  lib.rs  train.rs
scs-db/: Cargo.toml
scs-db/migrations/: 20211211231518_init.sql  20211221145009_user_auth.sql  20220215181058_init.sql
scs-db/src/: allowlist.rs  channels.rs  lib.rs  logs.rs  tokens.rs  user.rs  users.rs
scs-db/src/logs/: mod.rs
scs-explorer-backend/: Cargo.toml  README.md
scs-explorer-backend/src/: loaders.rs  main.rs  schema.rs
scs-explorer-backend/src/v1/: ctx.rs  logs.rs  models.rs
scs-ingest/: Cargo.toml
scs-ingest/src/: fs.rs  lib.rs  pg.rs  sink.rs
scs-manage-api/: Cargo.toml  README.md
scs-manage-api/src/: config.rs  ctx.rs  main.rs  schema.rs  streaming.rs  v1.rs
scs-sentry/: Cargo.toml  README.md
scs-sentry/src/: lib.rs
scs-ui/: .gitignore  .prettierrc  README.md  package.json  svelte.config.js  tsconfig.json
scs-ui/src/: app.html  global.d.ts
scs-ui/src/lib/: Navigation.svelte  api.ts  auth.ts  utils.ts
scs-ui/src/lib/api/: index.ts  stores.ts
scs-ui/src/lib/components/: InfiniteScroll.svelte  Loading.svelte  Navigation.svelte  Overlay.svelte
scs-ui/src/routes/: __error.svelte  __layout.svelte  index.svelte
scs-ui/src/routes/admin/: index.svelte
scs-ui/src/routes/login/: index.svelte
scs-ui/src/routes/logs/: [channel].svelte  index.svelte
scs-ui/src/routes/models/: index.svelte
scs-ui/static/: CNAME
scs-user-api/: Cargo.toml  README.md
scs-user-api/src/: auth.rs  ctx.rs  error.rs  main.rs  schema.rs
scs-user-api/src/ex/: mod.rs  twitch.rs
scs-user-api/src/v1/: ctx.rs  logs.rs  mod.rs  models.rs
src/chain/: debug.rs  lib.rs  ser.rs
src/chat/: config.rs  main.rs
src/collector/: config.rs  logger.rs  main.rs  main_bench.rs  sink.rs
src/ingest/: main.rs  parsing.rs
src/train/: config.rs  main.rs
src/transfer/: main.rs
src/twitch_api/: credentials.rs  lib.rs
