[package]
name = "shit-chat-says"
version = "0.10.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "scs-manage-api",
    "scs-user-api",
    "scs-config",
    "scs-chain",
    "scs-db",
    ".",
]

[[bin]]
name = "train"
path = "src/train/main.rs"

[[bin]]
name = "gen"
path = "src/gen/main.rs"

[[bin]]
name = "collector"
path = "src/collector/main.rs"

[[bin]]
name = "chat"
path = "src/chat/main.rs"

[[bin]]
name = "ingest"
path = "src/ingest/main.rs"

[features]
"no-progress" = []


[dependencies]
scs-chain = { path = "./scs-chain" }
scs-db = { path = "./scs-db" }
scs-config = { path = "./scs-config" }
anyhow = "1.0.48"
rustyline = "9.0.0"
tokio = { version = "1.14.0", features = ["full"] }
twitch = { git = "https://github.com/jprochazk/twitch-rs.git" }
env_logger = "0.9.0"
log = "0.4.14"
chrono = "0.4.19"
crossbeam-channel = "0.5.1"
walkdir = "2.3.2"
lazy_static = "1.4.0"
indicatif = "0.16.2"
ahash = "0.7.6"
rand = "0.8.4"
futures = "0.3.18"
structopt = "0.3.25"
regex = "1.5.4"

