[package]
name = "shit-chat-says"
version = "0.10.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "scs-manage-api",
    "scs-user-api",
    "scs-sentry",
    "scs-chain",
    "scs-db",
    ".",
]

[[bin]]
name = "train"
path = "src/train/main.rs"

[[bin]]
name = "gen"
path = "src/gen/main.rs"

[[bin]]
name = "collector"
path = "src/collector/main.rs"

# [[bin]]
# name = "collector_bencher"
# path = "src/collector/main_bench.rs"

[[bin]]
name = "chat"
path = "src/chat/main.rs"

[[bin]]
name = "ingest"
path = "src/ingest/main.rs"

[[bin]]
name = "transfer"
path = "src/transfer/main.rs"

[features]
"no-progress" = []

[dependencies]
scs-chain = { path = "./scs-chain" }
scs-db = { path = "./scs-db" }
scs-sentry = { path = "./scs-sentry" }
anyhow = "1.0.48"
rustyline = "9.0.0"
tokio = { version = "1.14.0", features = ["full"] }
twitch = { git = "https://github.com/jprochazk/twitch-rs.git", rev = "d040e86646a8c492e343cc24d270efb39454f3d6" }
env_logger = "0.9.0"
log = "0.4.14"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.71"
chrono = { version = "0.4.19", features = ["serde"] }
crossbeam-channel = "0.5.1"
walkdir = "2.3.2"
regex = "1.5.4"
lazy_static = "1.4.0"
indicatif = "0.16.2"
ahash = "0.7.6"
rand = "0.8.4"
itertools = "0.10.1"
humantime-serde = "1.0.1"
futures = "0.3.17"
structopt = "0.3.25"
async-fs = "1.5.0"
signal-hook = "0.3.12"
