[package]
name = "shit-chat-says"
version = "0.10.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["scs-manage-api", "scs-user-api", "scs-chain", "scs-db", "."]

[[bin]]
name = "train"
path = "src/train/main.rs"

[[bin]]
name = "gen"
path = "src/gen/main.rs"

[[bin]]
name = "collector"
path = "src/collector/main.rs"

[[bin]]
name = "chat"
path = "src/chat/main.rs"

[[bin]]
name = "ingest"
path = "src/ingest/main.rs"

[lib]
name = "twitch_api"
path = "src/twitch_api/lib.rs"

[features]
"no-progress" = []


[dependencies]
scs-chain = { path = "./scs-chain" }
scs-db = { path = "./scs-db" }
anyhow = "1.0.71"
rustyline = "12.0.0"
tokio = { version = "1.29.1", features = ["full"] }
twitch = { git = "https://github.com/jprochazk/twitch-rs.git" }
env_logger = "0.10.0"
log = "0.4.19"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
chrono = { version = "0.4.26", features = ["serde"] }
crossbeam-channel = "0.5.8"
walkdir = "2.3.3"
regex = "1.8.4"
lazy_static = "1.4.0"
indicatif = "0.17.5"
ahash = "0.8.3"
rand = "0.8.5"
itertools = "0.11.0"
humantime-serde = "1.1.1"
futures = "0.3.28"
structopt = "0.3.26"
tokio-tungstenite = { version = "0.19.0", features = ["rustls"] }
