[package]
name = "scs-chain"
version = "0.10.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
name = "chain"
path = "src/lib.rs"


[[bench]]
name = "chains"
harness = false

[dependencies]
ahash = "0.7.6"
rand = "0.8.4"
string-interner = "0.14.0"
itertools = "0.10.1"
anyhow = "1.0.51"

[dev-dependencies]
criterion = "0.3.5"
serde_yaml = "0.8.21"
markov = "1.1.0"
