[package]
name = "scs-chain"
version = "0.10.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
name = "chain"
path = "src/lib.rs"


[[bench]]
name = "chains"
harness = false

[dependencies]
ahash = "0.8.3"
rand = "0.8.5"
string-interner = "0.14.0"
itertools = "0.11.0"
anyhow = "1.0.71"

[dev-dependencies]
criterion = "0.5.1"
serde_yaml = "0.9.22"
markov = "1.1.0"
