[package]
name = "scs-db"
version = "0.0.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
name = "db"
path = "src/lib.rs"


[dependencies]
actix = "=0.12"
sqlx = { version = "0.5.9", features = ["postgres", "chrono", "runtime-actix-rustls"] }
tokio = { version = "1.14.0", features = ["full"] }
log = "0.4.14"
chrono = "0.4.19"
futures = "0.3.18"

[dev-dependencies]
env_logger = "0.9.0"