[package]
name = "scs-db"
version = "0.0.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
name = "db"
path = "src/lib.rs"


[dependencies]
actix = "=0.12"
actix-web = "=4.0.0-beta.12"
sqlx = { version = "0.5.9", features = ["postgres", "chrono", "runtime-actix-rustls"] }
log = "0.4.14"
chrono = { version = "0.4.19", features = ["serde"] }
futures = "0.3.18"
serde = { version = "1.0.130", features = ["derive"] }
ahash = "0.7.6"

[dev-dependencies]
env_logger = "0.9.0"
