[package]
name = "scs-db"
version = "0.0.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
name = "db"
path = "src/lib.rs"


[dependencies]
actix = "0.13.0"
actix-web = "4.3.1"
sqlx = { version = "0.6.3", features = ["postgres", "chrono", "runtime-actix-rustls"] }
log = "0.4.19"
chrono = { version = "0.4.26", features = ["serde"] }
futures = "0.3.28"
serde = { version = "1.0.164", features = ["derive"] }
ahash = "0.8.3"
getset = "0.1.2"
base64 = "0.21.2"

[dev-dependencies]
env_logger = "0.10.0"
