[package]
name = "scs-ingest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ingest"
path = "src/lib.rs"


[dependencies]
anyhow = "1.0.71"
async-trait = "0.1.71"
chrono = "0.4.26"
futures = "0.3.28"
log = "0.4.19"
scs-db = { path = "../scs-db" }
smol_str = { version = "0.2.0", features = ["serde"] }
thiserror = "1.0.43"
tokio = { version = "1.29.1", features = ["io-util", "fs"] }
