[package]
name = "scs-manage-api"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "=0.12"
actix-http = "=3.0.0-beta.13"
actix-web = "=4.0.0-beta.12"
actix-cors = "=0.6.0-beta.4"

log = "0.4.14"
env_logger = "0.9.0"
tokio = { version = "1.14.0", features = ["full"] }
futures = "0.3.18"
async-fs = "1.5.0"
anyhow = "1.0.51"
async-stream = "0.3.2"
serde = "1.0.131"
serde_json = "1.0.72"
cracken = "1.0.1"
actix-web-grants = "2.2.0"
actix-web-httpauth = "0.6.0-beta.4"
