[package]
name = "scs-manage-api"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13"
actix-web = "4"
actix-http = "3"
actix-cors = "0.6"

log = "0.4.14"
env_logger = "0.9.0"
tokio = { version = "1.27", features = ["full"] }
futures = "0.3.17"
async-fs = "1.5.0"
anyhow = "1.0.51"
async-stream = "0.3.2"
serde = "1.0.131"
serde_json = "1.0.72"
cracken = "1.0.1"
actix-web-grants = "3.0"
actix-web-httpauth = "0.8"
crossbeam-channel = "0.5.1"
