[package]
name = "scs-manage-api"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-web = "4.3.1"
actix-http = "3.3.1"
actix-cors = "0.6.4"

log = "0.4.19"
env_logger = "0.10.0"
tokio = { version = "1.29.1", features = ["full"] }
futures = "0.3.28"
async-fs = "1.6.0"
anyhow = "1.0.71"
async-stream = "0.3.5"
serde = "1.0.164"
serde_json = "1.0.99"
cracken = "1.0.1"
actix-web-grants = "3.0.1"
actix-web-httpauth = "0.8.0"
crossbeam-channel = "0.5.8"
