[package]
name = "scs-sentry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
name = "scs_sentry"
path = "src/lib.rs"

[features]
default = ["sentry"]
sentry = ["dep:sentry"]

[dependencies]
sentry = { version="0.24.3", optional = true }
