[package]
name = "scs-uesr-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
juniper = "0.15.7"
juniper_actix = "0.4.0"

actix = "=0.12"
actix-http = "=3.0.0-beta.13"
actix-web = "=4.0.0-beta.12"
actix-cors = "=0.6.0-beta.4"

log = "0.4.14"
env_logger = "0.9.0"
tokio = "1.14.0"
futures = "0.3.18"
async-fs = "1.5.0"
cached = "0.26.2"
anyhow = "1.0.51"
chrono = "0.4.19"

serde = "1.0.131"
base64 = "0.13.0"

scs-chain = { path = "../scs-chain" }
scs-db = { path = "../scs-db" }