[package]
name = "scs-user-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "=0.12"
actix-http = "=3.0.0-beta.13"
actix-web = "=4.0.0-beta.12"
actix-cors = "=0.6.0-beta.4"

log = "0.4.14"
env_logger = "0.9.0"
tokio = "1.14.0"
futures = "0.3.17"
async-fs = "1.5.0"
cached = "0.26.2"
anyhow = "1.0.51"
chrono = { version = "0.4.19", features = ["serde"] }
lazy_static = "1.4.0"
serde = "1.0.131"
base64 = "0.13.0"
regex = "1.5.4"
reqwest = { version = "0.11.7", features = ["json"] }
structopt = "0.3.25"
rand = "0.8.4"

scs-chain = { path = "../scs-chain" }
scs-db = { path = "../scs-db" }
